# eclipse-mcu-gcc-lto

./: CMakeLists.txt  Readme.md  toolchain.cmake
app/: CMakeLists.txt  main.cpp
app_direct/: CMakeLists.txt  link.ld
libs/emlib/: CMakeLists.txt
libs/emlib/inc/: core_cmFunc.h
